Revision history for Perl extension Module::Build.

0.40_10 - 

0.40_09 - Tue Nov  5 00:13:11 CET 2013

  [ENHANCEMENTS]

  - Converted to using Meta 2.0

0.4008 - Mon Nov  4 23:10:54 CET 2013

  [BUG FIXES]

  - Fix test failing on ancient perls <= 5.8.1 [Peter Rabbitson]

  - Do not set default switches in Test::Harness; not even -w [Leon Timmermans]

  [DOCUMENTATION]

  - Fix a couple more broken links to CPAN::META::Spec that should
    have been CPAN::Meta::Spec. [Reported by Mike Doherty]

0.4007 - Fri Jul 19 13:44:39 CEST 2013

  [BUG FIXES]

  - Removed undeclared test dependency on parent.pm [Leon Timmermans]

  - Declared dependency on Pod::Man 2.17 for utf8 support [Leon Timmermans]

  - Force generation of man pages in manify_with_utf8.t [Leon Timmermans]

0.4006 - Thu Jul 18 14:19:49 CEST 2013

  - Announcement: The Perl5-Porters have decided to remove
    Module::Build from the perl core distribution.  It will still be
    available on CPAN, and development is planned to continue
    regardless.

    For more information, see:

    * http://www.nntp.perl.org/group/perl.perl5.porters/2013/05/msg202041.html
    * http://blogs.perl.org/users/joel_berger/2013/05/on-the-removal-of-some-core-modules.html
    * http://www.dagolden.com/index.php/2140/paying-respect-to-modulebuild/
    * http://perlhacks.com/2013/06/removing-modules-from-core/

  [BUG FIXES]

  - In the 'installdeps' action, w don't need to check for an
    executable bit on the CPAN client, just try executing it.
    Otherwise we needlessly fail on e.g. VMS.

  - Actually handle utf8 correctly in utf8-man tests. [Leon Timmermans]

  - Don't clobber standard array/hash attributes in subclasses that
    have their own array/hash attributes. [Graham Ollis]

  - We now allow underscores in package names, when extracting the
    name & abstract from POD. [Ricardo Signes, Shlomi Fish]

  - When building HTML docs, fix a problem with setting the --htmlroot
    argument. [Ken Williams]
