@@ -2,6 +2,10 @@ Revision history for Perl extension Module::Build.
 
 0.40_10 - 
 
+  [BUG FIXES]
+
+  - Lowercase license in fallback logic [Leon Timmermans]
+
 0.40_09 - Tue Nov  5 00:13:11 CET 2013
 
   [ENHANCEMENTS]
